<resources>
    <string name="app_name">My Application tg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Leon Uraltsev</string>
    <string name="settings_default_status">Online</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_default_number">+79111111111</string>
    <string name="settings_label_phone">Click, to change the number</string>
    <string name="settings_login">Leon Uraltsev</string>
    <string name="settings_label_login">User name</string>
    <string name="settings_bio">About</string>
    <string name="settings_label_bio">Write a little about yourself</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="settings_menu_exit">Exit</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Enter code</string>
    <string name="register_text_send_code">we have sent an SMS with a code to your phone</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Your number</string>
</resources>